tests/error/incomplete_parent.gw
// [skip] cannot extend incomplete type
class C extends UnknownParentClass { <<<"Hello, You!", "">>>; }
class UnknownParentClass { <<<"Hello, World!", "">>>; }
C c;
<<<c>>>;
